# foundry

./: .gitignore  README.md  pyproject.toml
.github/actions/helm-lint/: action.yml
.github/actions/python-lint-test/: action.yml
.github/workflows/: _python-lint-test.yml  _service-template.yml  ci.yml  github-stats.yml  python-lint-test.yml
.github/workflows/templates/helm/: lint.yml
docs/: why-this-design.md
docs/architecture/: architecture-overview.md  master-architecture.md  phase-1-first-paved-road.md  phase-2-golden-path.md  phase-3-gitops-deployment.md  phase-4-incident-assistant.md
docs/plans/: 2026-04-12-platform-design.md
docs/superpowers/plans/: 2026-04-22-github-stats-scaffold-lint-ci.md  2026-04-23-observability-stack.md  2026-04-28-generic-service-helm-ci-model.md
docs/superpowers/specs/: 2026-04-22-github-stats-service-scaffold-and-lint-ci-design.md  2026-04-23-observability-stack-design.md  2026-04-28-generic-service-helm-ci-model-design.md
helm/charts/generic-service/: Chart.yaml  values.yaml
helm/charts/github-stats/: Chart.yaml  values.yaml
helm/values/github-stats/: values.yaml
infra/grafana-stack/: helmfile.yaml
infra/grafana-stack/dashboards/: github-stats.json
infra/grafana-stack/values/: grafana.yaml  loki.yaml  otel-collector.yaml  prometheus.yaml  tempo.yaml
infra/kind/: cluster.yaml
scripts/: deploy-local.py  stack-up.py
services/github-stats/: Dockerfile  README.md  pyproject.toml
services/github-stats/src/github_stats/: cli.py
services/github-stats/tests/: test_health.py
(+9 files in other folders)
