[project]
name = "github-stats"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E=pycodestyle errors, F=pyflakes, I=isort
# Full rule reference: https://docs.astral.sh/ruff/rules/
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
dev = "github_stats.cli:dev"
test = "github_stats.cli:test"
lint = "github_stats.cli:lint"
format = "github_stats.cli:fmt"
